welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return(nbDouble6,nb67)
        ^